--- a/index.html
+++ b/index.html
@@ -7,5 +7,56 @@
     <!-- Css link here -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body class="work-sans-font"></body>
+  <body class="work-sans-font">
+    <!-- Header -->
+    <header class="bg-light">
+      <div class="container">
+        <!-- Navbar -->
+        <nav class="navbar">
+          <a href="" class="navbar-brand text-decoration dark-light">
+            <h2 class="dark-gray fw-bold">G3 Architects</h2>
+          </a>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#" class="nav-link text-decoration dark-light fw-regular"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link text-decoration dark-light fw-regular"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link text-decoration dark-light fw-regular"
+                >Contact Us</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link text-decoration dark-light fw-regular"
+                >Login</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <!-- Banner -->
+        <div class="banner">
+          <div class="banner-content">
+            <h1 class="banner-title fw-bold dark-gray">
+              Brand New Group of Architects
+            </h1>
+            <p class="banner-description fs-16 fw-regular dark-extra-light">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+            <button type="button" class="bg-primary fw-semibold btn">
+              Explore More
+            </button>
+          </div>
+          <img class="banner-image" src="./images/banner.png" alt="" />
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
