Add facts section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         ></marquee
       >
       <div class="container">
-        <!-- Navbar -->
+        <!-- Navbar section start -->
         <nav class="navbar display-flex">
           <a href="" class="navbar-brand text-decoration dark-light">
             <h2 class="dark-gray fw-bold">G5 Architects</h2>
@@ -46,7 +46,7 @@
             </li>
           </ul>
         </nav>
-        <!-- Banner -->
+        <!-- Banner section start -->
         <div class="banner">
           <div class="banner-content">
             <h1 class="banner-title fw-bold dark-gray">
@@ -66,6 +66,7 @@
 
     <!-- Main -->
     <main class="container">
+      <!-- Teams section start -->
       <section class="teams display-flex">
         <div class="teams-img-content">
           <img src="./images/team1.png" alt="" />
@@ -87,6 +88,63 @@
             humour, or randomised words which don't look even
           </p>
           <button class="btn" type="button">Explore More</button>
+        </div>
+      </section>
+
+      <!-- Facts -->
+      <section class="facts">
+        <div class="facts-content">
+          <h2 class="facts-title dark-gray fw-bold">Some Facts</h2>
+          <p class="facts-text dark-extra-light fs-16 fw-regular">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+
+        <div class="facts-content-card">
+          <div class="facts-card display-flex">
+            <div>
+              <img class="facts-img" src="./images/icons/ribon.png" alt="" />
+              <h3 class="facts-title dark-light fw-semibold fs-45">54</h3>
+              <span class="facts-text dark-extra-light fw-semibold fs-20"
+                >Awards Winnings</span
+              >
+            </div>
+          </div>
+
+          <div class="facts-card display-flex">
+            <div>
+              <img class="facts-img" src="./images/icons/projects.png" alt="" />
+              <h3 class="facts-title dark-light fw-semibold fs-45">1458</h3>
+              <span class="facts-text dark-extra-light fw-semibold fs-20"
+                >Project Finished</span
+              >
+            </div>
+          </div>
+
+          <div class="facts-card display-flex">
+            <div>
+              <img
+                class="facts-img"
+                src="./images/icons/customers.png"
+                alt=""
+              />
+              <h3 class="facts-title dark-light fw-semibold fs-45">590</h3>
+              <span class="facts-text dark-extra-light fw-semibold fs-20"
+                >Clients Worked</span
+              >
+            </div>
+          </div>
+
+          <div class="facts-card display-flex">
+            <div>
+              <img class="facts-img" src="./images/icons/email.png" alt="" />
+              <h3 class="facts-title dark-light fw-semibold fs-45">22578</h3>
+              <span class="facts-text dark-extra-light fw-semibold fs-20"
+                >Email Send</span
+              >
+            </div>
+          </div>
         </div>
       </section>
     </main>
