Add sponsors section

--- a/index.html
+++ b/index.html
@@ -147,6 +147,25 @@
           </div>
         </div>
       </section>
+
+      <!-- Sponsors -->
+      <section class="our-Sponsors">
+        <div class="sponsors">
+          <h3 class="sponsors-title dark-gray fw-bold fs-45">Our Sponspors</h3>
+          <p class="sponsors-text dark-extra-light fw-regular fs-16">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+
+        <div class="sponsors-logos">
+          <img src="./images/sponsors/spotify.png" alt="" />
+          <img src="./images/sponsors/amazon.png" alt="" />
+          <img src="./images/sponsors/google.png" alt="" />
+          <img src="./images/sponsors/telerama.png" alt="" />
+          <img src="./images/sponsors/figma.png" alt="" />
+        </div>
+      </section>
     </main>
   </body>
 </html>
