Add footer section

--- a/index.html
+++ b/index.html
@@ -167,5 +167,12 @@
         </div>
       </section>
     </main>
+
+    <!-- Footer -->
+    <footer class="container">
+      <p class="footer-text bg-light">
+        All rights reserved copyright@2023 startup landing page design
+      </p>
+    </footer>
   </body>
 </html>
