--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </p>
             <button type="button" class="fw-semibold btn">Explore More</button>
           </div>
-          <img class="banner-image" src="./images/banner.png" alt="" />
+          <img class="banner-image" src="./images/smnn.png" alt="" />
         </div>
       </div>
     </header>
