Fiexed some problems

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body class="work-sans-font">
     <!-- Header -->
+    <header class="bg-light">
       <div class="container">
         <!-- Navbar section start -->
         <nav class="navbar display-flex">
