Add feature section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,70 @@
         </div>
       </section>
 
+      <!-- Feature -->
+      <section class="feature display-flex">
+        <div>
+          <h2 class="feature-title dark-gray fs-45 fw-bold">
+            Features you will <br />
+            love & enjoy
+          </h2>
+          <p class="feature-text dark-extra-light fs-16 fw-regular">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+
+          <div class="feature-card">
+            <h3 class="feature-card-title dark-gray fs-20 fw-semibold">
+              Dexktop & Mobile Version
+            </h3>
+            <p class="feature-card-text dark-extra-light fs-16 fw-regular">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h3 class="feature-card-title dark-gray fs-20 fw-semibold">
+              Dexktop & Mobile Version
+            </h3>
+            <p class="feature-card-text dark-extra-light fs-16 fw-regular">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h3 class="feature-card-title dark-gray fs-20 fw-semibold">
+              Dexktop & Mobile Version
+            </h3>
+            <p class="feature-card-text dark-extra-light fs-16 fw-regular">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h3 class="feature-card-title dark-gray fs-20 fw-semibold">
+              Dexktop & Mobile Version
+            </h3>
+            <p class="feature-card-text dark-extra-light fs-16 fw-regular">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+        </div>
+        <div class="feature-img">
+          <img src="./images/architect.png" alt="" />
+          <button class="feature-btn btn" type="button" class="btn">
+            <span class="feature-btn-large fw-bold">10+Year</span>
+            <br />
+            <span class="feature-btn-small">Experience</span>
+          </button>
+        </div>
+      </section>
+
       <!-- Facts -->
       <section class="facts">
         <div class="facts-content">
